--- a/templates/dns_private_resolver/manifest.yaml
+++ b/templates/dns_private_resolver/manifest.yaml
@@ -3,4 +3,4 @@ version: 1.0.0
 summary: Deploys the Azure DNS Private Resolver
 description: Deploys the Azure DNS Private Resolver with some Private DNS Zones
 runner: ARM
-templatePath: azuredeploy.json
+templatePath: main.json
