--- a/templates/app_service_with_ddbb/manifest.yaml
+++ b/templates/app_service_with_ddbb/manifest.yaml
@@ -1,17 +1,16 @@
-name: WebAppWithDDBB
+name: AppServiceWithDDBB
 version: 1.0.0
-summary: Deploys the WebApp with DDBB
-description: Deploys the WebApp with DDBB Flexible Server
+summary: Deploys the App Service with DDBB
+description: Deploys App Service with DDBB Flexible Server
 runner: ARM
 templatePath: main.json
 
 parameters:
   - id: sku
-    name: Sku
-    description: "Sku of the Web App"
+    name: App Service Sku
+    description: "Sku of the App Service"
     type: string
     allowed:
-      - Y1
       - B1
       - B2
       - B3
