--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,19 @@
 repos:
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.90.0
+    hooks:
+      - id: terraform_fmt
+        name: Format Terraform code
+
+      - id: terraform_tflint
+        name: Validate Terraform tests
+        args:
+          - --args=--enable-rule=terraform_naming_convention
+          - --args=--enable-rule=terraform_unused_required_providers
+          - --args=--module
+
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.40.0
+    rev: v0.41.0
     hooks:
       - id: markdownlint
         name: Validate Markdown text
@@ -15,21 +28,11 @@ repos:
         name: Check for files that contain merge conflict strings
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.89.1
+    rev: v1.90.0
     hooks:
-      - id: terraform_fmt
-        name: Format Terraform code
-
       - id: terraform_validate
         name: Validate Terraform code
         args:
           - --tf-init-args=-upgrade
           - --tf-init-args=-backend=false
           - --hook-config=--retry-once-with-cleanup=true
-
-      - id: terraform_tflint
-        name: Validate Terraform tests
-        args:
-          - --args=--enable-rule=terraform_naming_convention
-          - --args=--enable-rule=terraform_unused_required_providers
-          - --args=--module
