--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,6 +19,17 @@
         },
         "ghcr.io/azure/azure-dev/azd:0": {
             "version": "stable"
+        },
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {
+            "moby": true,
+            "azureDnsAutoDetection": true,
+            "installDockerBuildx": true,
+            "installDockerComposeSwitch": true,
+            "version": "latest",
+            "dockerDashComposeVersion": "latest"
+        },
+        "ghcr.io/devcontainers/features/powershell:1": {
+            "version": "latest"
         }
     },
     "onCreateCommand": "pre-commit install",
@@ -37,6 +48,7 @@
                 "hashicorp.terraform",
                 "ms-azuretools.azure-dev",
                 "ms-azuretools.vscode-bicep",
+                "ms-azuretools.vscode-docker",
                 "redhat.vscode-yaml",
                 "vscode-icons-team.vscode-icons"
             ],
